@@ -1,3 +1,9 @@
+linuxmuster-linbo (2.3.59-0) babo62; urgency=low
+
+  * lmn7: further modifications and fixes for dynamicip hosts support (#126).
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Sun, 19 Apr 2020 13:03:55 +0200
+
 linuxmuster-linbo (2.3.58-0) babo62; urgency=low
 
   * lmn7:
